dxDiagram - hide viewpanel while mobile toolbox is visible, fix adaptive calcs (#12704)

--- a/styles/widgets/common/diagram.less
+++ b/styles/widgets/common/diagram.less
@@ -198,6 +198,7 @@
     position: absolute;
     z-index: @OVERLAY_ZINDEX + 1;
     width: 100%;
+    transition: opacity 400ms ease;
 
     &.dx-diagram-properties-panel-toolbar-container {
         background: transparent;
